fix: fix layout on mobile

--- a/src/components/cover.css
+++ b/src/components/cover.css
@@ -26,7 +26,7 @@
 }
 
 .nk-cover__title {
-  font-size: 3em;
+  font-size: 2.5em;
   
   @media (--medium) {
     font-size: 6em;
