--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -6,35 +6,40 @@
 /* Better naming for this */
 
 .nk-l-2col {
-  display: grid;
-  grid-template-columns: 300px 1fr;
   height: 100vh;
+
+  @media (--medium) {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+  }
 }
 
 /* Colors to docs */
 
-.nk-l-2col__sidebar{
+.nk-l-2col__sidebar {
   background: var(--color--k-6);
 }
-.nk-l-2col__main{
+.nk-l-2col__main {
   background: var(--color--k-8);
 }
 
 .nk-l-3col {
-  display: grid;
-  grid-template-columns: 300px 1fr 300px;
   height: 100vh;
+  @media (--medium) {
+    display: grid;
+    grid-template-columns: 300px 1fr 300px;
+  }
 }
 
-.nk-l-3col__sidebar{
+.nk-l-3col__sidebar {
   background: var(--color--k-6);
 }
 
-.nk-l-3col__main{
+.nk-l-3col__main {
   background: var(--color--k-8);
 }
 
-.nk-l-3col__aside{
+.nk-l-3col__aside {
   background: var(--color--k-6);
 }
 
@@ -44,10 +49,9 @@
   height: 100vh;
 }
 
-.nk-l-double__item{
+.nk-l-double__item {
   background: var(--color--k-6);
 }
-
 
 /* TODO: Is this approach good? It is a fullscreen option for an element inside the nk-container. Is it antipattern? */
 .nk-fullscreen {
